--- a/css/main.scss
+++ b/css/main.scss
@@ -4,9 +4,16 @@
 
 @charset "utf-8";
 
+@import url('https://fonts.googleapis.com/css?family=Poppins:600&display=swap');
+
 
 
 // Base styles ===========================================================================
+
+h1, h2, h3 {
+  font-family: Poppins;
+  font-weight: 600;
+}
 
 a {
   text-decoration: underline;
